--- a/video_max.html
+++ b/video_max.html
@@ -19,10 +19,6 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             margin-bottom: 30px;
             padding: 20px;
-            background-image: url('images/icon15.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
         }
 
         .content-section h2 {
@@ -208,10 +204,9 @@
         <ul class="video-links" data-group="Служіння"></ul>
     </div>
 
-    <footer style="background-color: #f4f4f4; padding: 20px; text-align: center; border-top: 1px solid #ccc; margin-top: 50px;">
-        <p>м. Суми, версія збірки: © 2024 р.</p>
+    <footer style="text-align: center; margin-top: 20px;">
+        <p>&copy; 2024 Церква "Дім Євангелія"</p>
     </footer>
-
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             const loader = document.getElementById('loader');
