--- a/video_max.html
+++ b/video_max.html
@@ -5,6 +5,7 @@
     <title>Список видео с YouTube</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="istockphoto-626708040-612x612.jpg">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,6 +13,7 @@
             background-color: #f7f7f7;
         }
 
+        /* Стили для контейнеров */
         .content-section {
             background-color: #fff;
             border: 1px solid #ddd;
@@ -19,6 +21,10 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             margin-bottom: 30px;
             padding: 20px;
+            background-image: url('images/icon15.jpg'); /* Путь к вашему фоновому изображению */
+            background-size: cover; /* Масштабирование изображения */
+            background-repeat: no-repeat; /* Запрет повторения фонового изображения */
+            background-position: center; /* Центрирование фонового изображения */
         }
 
         .content-section h2 {
@@ -43,7 +49,7 @@
             text-decoration: none;
             color: #333;
             transition: background-color 0.3s;
-            padding: 1px;
+            padding: 1px 1px;
             border-radius: 4px;
             flex-wrap: wrap;
         }
@@ -53,14 +59,16 @@
             margin-right: 10px;
         }
 
+        /* Стили для основного логотипа */
         .content-section .video-avatar {
-            width: 100px;
-            height: auto;
+            width: 100px;  /* Установите желаемую ширину */
+            height: auto;  /* Автоматическое масштабирование высоты */
         }
 
+        /* Стили для иконки YouTube */
         .video-link img {
-            width: 50px;
-            height: auto;
+            width: 50px;   /* Установите желаемую ширину */
+            height: auto;  /* Автоматическое масштабирование высоты */
         }
 
         .video-player {
@@ -86,7 +94,7 @@
         label[for="preachers-toggle"]:after {
             content: "▼";
             position: absolute;
-            right: -20px;
+            right: -20px; /* Сдвигаем на 20px вправо */
         }
 
         input[type="checkbox"]:checked + .submenu {
@@ -152,12 +160,63 @@
         }
     </style>
 </head>
-<body>    
+<body>
+    <h2>Церква "Дім Євангелія"</h2>
+    <p>Збірник відео записів.</p>
+    <p style="font-size: smaller; color: green;">[Cторінка : Записи служінь]</p>
 
+    <nav>
+        <ul>
+            <li><a href="index.html">Головна</a></li>
+            <li><a href="video_other.html">Другі відео</a></li>
+            <li>
+                <a>Всі записи служінь:</a>
+                <ul>
+                    <li><a href="#service">Служіння</a></li>
+                    <li><a href="#praise_the_lord">Прославлення Господа</a></li>
+                    <li><a>Проповідники:</a>
+                        <ul>
+                            <li><a href="#marioha">Марйоха</a></li>
+                            <li><a href="#mischenko">Міщенко</a></li>
+                            <li><a href="#buligin">Булигін</a></li>
+                            <li><a href="#zinchenko">Зінченко</a></li>
+                            <li><a href="#laba">Лаба</a></li>
+                            <li><a href="#parfylo">Парфило</a></li>
+                            <li><a href="#komisar">Комісар</a></li>
+                            <li><a href="#ivanchenko">Іванченко</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#youth_praise">Прославлення, Молодіжна</a></li>
+                    <li><a href="#choir_singing">Хоровий спів</a></li>
+                    <li><a href="#water_baptism">Водне хрещення</a></li>
+                    <li><a href="#other_videos">Інші відео</a></li>
+                </ul>
+            </li>
+            <li><a href="radio.html">Християнське радіо 1</a></li>
+            <li><a href="radio_player.html">Християнське радіо 2</a></li>
+        </ul>
+    </nav>
 
-    <footer style="text-align: center; margin-top: 20px;">
-        <p>&copy; 2024 Церква "Дім Євангелія"</p>
+    <!-- Индикатор загрузки -->
+    <div id="loader" style="display: none; text-align: center; margin-top:20px;">
+        <img src="images/Spinner-3.gif" alt="Loading..." width="50">
+        <p>Завантаження відео...</p>
+    </div>
+
+    <p style="font-size: smaller; color: red; text-align: center;">Повна збірка. Всього відео: <span id="totalVideoCount" style="font-size: smaller; color: red;">0</span></p>
+
+    <div class="content-section" id="service">
+        <h2>
+            <img src="images/sq-5.jpg" alt="Аватар" class="video-avatar">
+            <a>Служіння</a>
+        </h2>
+        <ul class="video-links" data-group="Служіння"></ul>
+    </div>
+
+    <footer style="background-color: #f4f4f4; padding: 20px; text-align: center; border-top: 1px solid #ccc; margin-top: 50px;">
+        <p>м. Суми, версія збірки: © 2024 р.</p>
     </footer>
+
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             const loader = document.getElementById('loader');
@@ -166,19 +225,15 @@
 
             // Загрузка списка видео из файла
             loader.style.display = 'block';  // Показать индикатор загрузки
-            fetch('https://raw.githubusercontent.com/ruyriy/VideoYouTube/main/youtube_videos_list.txt')
+            fetch('https://raw.githubusercontent.com/ruyriy/VideoYouTube/main/videos.txt')
                 .then(response => response.text())
                 .then(data => {
-                    const videos = data.trim().split('\n');
-                    processVideos(videos);
-                    loader.style.display = 'none';  // Скрыть индикатор загрузки после завершения
-                })
-                .catch(error => {
-                    console.error('Ошибка загрузки видео:', error);
-                    loader.style.display = 'none';  // Скрыть индикатор загрузки в случае ошибки
+                    loader.style.display = 'none';  // Скрыть индикатор загрузки
+                    const videos = data.split('\n').filter(Boolean);
+                    renderVideoLists(videos);
                 });
 
-            function processVideos(videos) {
+            function renderVideoLists(videos) {
                 const videoGroups = {};
                 const unknownVideos = [];
 
@@ -190,24 +245,28 @@
                     videoGroups[group].push({ videoIndex, videoId, videoTitle });
                 });
 
+                // Обновляем глобальный счетчик
                 const totalVideoCount = videos.length;
                 document.getElementById('totalVideoCount').textContent = totalVideoCount;
 
                 videoLinksContainers.forEach(container => {
-                    const groupNames = container.getAttribute('data-group').split('|');
+                    const groupNames = container.getAttribute('data-group').split('|'); // Разделение групп по прямой черте
                     const videosForGroup = groupNames.flatMap(group => videoGroups[group] || []);
 
                     renderVideoList(videosForGroup, container);
 
+                    // Удаление известных групп из общего списка видео
                     groupNames.forEach(group => {
                         delete videoGroups[group];
                     });
                 });
 
+                // Сбор всех оставшихся групп
                 Object.values(videoGroups).forEach(groupVideos => {
                     unknownVideos.push(...groupVideos);
                 });
 
+                // Поиск и обработка контейнера для неизвестных групп
                 const unknownGroupContainer = document.querySelector('.video-links[data-group="unknown"]');
                 renderVideoList(unknownVideos, unknownGroupContainer);
             }
