--- a/video_max.html
+++ b/video_max.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Список видео с YouTube</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="istockphoto-626708040-612x612.jpg">
+   <link rel="icon" href="istockphoto-1331574354.jpg">
 
     <style>
         body {
